packages/ui/src/elements/ConfirmationModal/index.css
@layer payload-default {
  .confirmation-modal__body {
    display: flex;
    flex-direction: column;
    gap: var(--spacer-2-5);
  }
}

