fix(ui): adjust gap from --spacer-2-5 to --spacer-2

--- a/packages/ui/src/elements/ConfirmationModal/index.css
+++ b/packages/ui/src/elements/ConfirmationModal/index.css
@@ -2,6 +2,6 @@
   .confirmation-modal__body {
     display: flex;
     flex-direction: column;
-    gap: var(--spacer-2-5);
+    gap: var(--spacer-2);
   }
 }
